Probably fixed the type icon responsiveness and ugly spacing issue... vertical alignment of [togepi] image not ideal

--- a/project/styles/pokemon-type-matchup-tool.css
+++ b/project/styles/pokemon-type-matchup-tool.css
@@ -114,10 +114,11 @@ nav {
 
 #type-grid
 {
+    align-self: top;
     grid-column: 1 / 2;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(60px, 1fr));
-    grid-template-rows: repeat(auto-fit, minmax(26px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(60px, 100px));
+    grid-template-rows: repeat(auto-fill, minmax(20px, 1fr));
     align-items: start;
     gap: 0.25rem;
     margin: -2rem 0 1.75rem 1.25rem;
@@ -129,8 +130,6 @@ nav {
     height: auto;
     max-height: 22px;
     max-width: 100px;
-    /* min-width: 0;  NEED A BETTER OPTION to evenly squeeze all icons vertically
-    min-height: 0; */
     transition: transform 0.15s ease-in-out;
 }
 
@@ -144,6 +143,7 @@ nav {
 
 #pokemon-example
 {
+    margin: -10px 0 10px;
     grid-row: 2 / 3;
     grid-column: 2 / 3;
     align-self: center;
@@ -195,8 +195,30 @@ p, a, figcaption {
         white-space: normal;
     }
 
+    #eighteen-types-container {
+        margin: 4.5rem 0.25rem 1.75rem 0.25rem;
+        display: grid;
+        grid-template-rows: 1fr 2fr;
+        grid-template-columns: 2fr 2fr;
+        position: relative;
+        max-width: 100%;
+    }
+
     #type-grid {
         width: 100%;
         max-width: 500px;
+        align-self: top;
+        grid-column: 1 / 2;
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(60px, 100px));
+        grid-template-rows: repeat(auto-fill, minmax(20px, 1fr));
+        align-items: start;
+        gap: 1rem;
+        margin: -2rem 0 1.75rem 1.25rem;
+        clear: both;
+    }
+    
+    figcaption {
+        width: 250px;
     }
 }
